contact page style changes

--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@ NOTE: We reserve the right to suspend accounts for any reason whatsoever, as out
             <section id="contact" class="ts-separate-bg-element" data-bg-image-opacity=".2" data-bg-color="#e58450">
                 <div class="container" id=contacts>
                     <div class="ts-box mb-0 p-5 ts-mt__n-10" data-animate="ts-fadeInUp">
-                        <div class="row">
+                        <div class="row" id="rose">
                             <div class="col-md-4">
                                 <h3>Contact Us</h3>
                                 <address>
