changes in privacy polisy

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         });
     });
 </script>
-      <style type="text/css">
+     <style type="text/css">
                 @font-face {
     font-family: 'allerregular';
     src: url('fonts/aller_rg-webfont.woff2') format('woff2'),
@@ -78,10 +78,10 @@
     font-weight: normal;
     font-style: normal;}
 
-    #header_menu:{font-family: 'allerregular';}
+    h4{font-family: 'allerregular';}
 
-    
    
+    
      </style>
 
 </head>
