--- a/index.html
+++ b/index.html
@@ -188,24 +188,24 @@
                   <div class="panel panel-default">
                     <div class="panel-heading">
                       <h4 class="panel-title">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseOne">Are my photos in this app public or private?<i class="indicator icon_plus_alt2 pull-right"></i></a>
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseOne">Whether my photos in the app are public or private?<i class="indicator icon_plus_alt2 pull-right"></i></a>
                       </h4>
                     </div>
                     <div id="collapseOne" class="panel-collapse collapse">
                       <div class="panel-body">
-                        All your photos in this app can be seen by other members.
+                        All the photos uploaded in the app are visible to others.
                       </div>
                     </div>
                   </div>
                   <div class="panel panel-default">
                     <div class="panel-heading">
                       <h4 class="panel-title">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseTwo">Will my name be visible to other members?<i class="indicator icon_plus_alt2 pull-right"></i></a>
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseTwo">Is my name visible to other members?<i class="indicator icon_plus_alt2 pull-right"></i></a>
                       </h4>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse">
                       <div class="panel-body">
-                        Your name, age, gender and location which you provided in the app will be visible to other members.
+                        All the information provided by you, such as name, age, gender, and the location is visible to other members of the app. 
                       </div>
                     </div>
                   </div>
@@ -224,36 +224,37 @@
                    <div class="panel panel-default">
                     <div class="panel-heading">
                       <h4 class="panel-title">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseFour">How do I turn on/off Push notifications?<i class="indicator icon_plus_alt2 pull-right"></i></a>
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseFour">How do I turn on/off push notifications?<i class="indicator icon_plus_alt2 pull-right"></i></a>
                       </h4>
                     </div>
                     <div id="collapseFour" class="panel-collapse collapse">
                       <div class="panel-body">
-                        You can turn on/off all push notifications in your profile (Settings/My Account).
+                        Go to Your profile > settings > Enable push notification
                       </div>
                     </div>
                   </div>
                    <div class="panel panel-default">
                     <div class="panel-heading">
                       <h4 class="panel-title">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseFive">I think another user is sending me spam, what can I do?<i class="indicator icon_plus_alt2 pull-right"></i></a>
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseFive">Someone is sending me spam messages, what can I do about it?<i class="indicator icon_plus_alt2 pull-right"></i></a>
                       </h4>
                     </div>
                     <div id="collapseFive" class="panel-collapse collapse">
                       <div class="panel-body">
-                        Just hit the "Report as SPAM" button on the message. This sends us a notification telling us who has been reported and the message ID, we can then go and check the message. Users who send spam will have their profiles and all sent emails deleted without warning.
+                        Hit the "Report as Spam" button on the profile; this will notify us about the user and message ID. After cross-verification, the user sending spam will have their profile and data been removed from the app.
                       </div>
                     </div>
                   </div>
                    <div class="panel panel-default">
                     <div class="panel-heading">
                       <h4 class="panel-title">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseSix">How can I search for members by username?<i class="indicator icon_plus_alt2 pull-right"></i></a>
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseSix">Can I search for members using the username?<i class="indicator icon_plus_alt2 pull-right"></i></a>
                       </h4>
                     </div>
                     <div id="collapseSix" class="panel-collapse collapse">
                       <div class="panel-body">
-                        Currently, we are not offering members the ability to search by username. Our development team is working on improving the keyword search feature to produce more refined results. We greatly appreciate your patience in this matter!
+                        We are currently working on this functionality and many more features to produce more refined results. We appreciate your patience.
+
                       </div>
                     </div>
                   </div>
@@ -265,7 +266,7 @@
                     </div>
                     <div id="collapseSeven" class="panel-collapse collapse">
                       <div class="panel-body">
-                        Sorry, no refund can be provided on your paid access fees. If you would like to cancel your current subscription, you can find helpful information from Apple or Google Play
+                        Once the payment made cannot be reverted. However, if you would like to cancel your subscription, you can find helpful information from Apple or Google play store.
                       </div>
                     </div>
                   </div>
@@ -277,56 +278,59 @@
                     </div>
                     <div id="collapseight" class="panel-collapse collapse">
                       <div class="panel-body">
-                        If your account was suspended, a hold was placed due to suspicious account activity. Your profile and photos will be saved, but you will not be able to use the app, and other members will not be able to view your profile. Messages sent to your account will still be received, but cannot be accessed unless the suspension is fully reviewed and granted by Customer Support. Reasons for account suspension can include:
-Reports by other members about your profile or conduct
-Abusive, vulgar or sexually explicit language
-Asking for money up front or in advance of your date
-Using our site as an escort, or using the Service to solicit clients for an escort service
-Using our site to promote, solicit, or engage in prostitution
-Promoting or advertising a business
-Selling pictures, videos or cam sessions
-Soliciting passwords, bank information or other personal identifying information for commercial or unlawful purposes from other users
-Posting any false, misleading, or inaccurate content about yourself and/or your profile
-Having multiple active accounts
-Creating a profile if you are under the age of 18
-Posting or sending material that exploits people under the age of 18 in a sexual or violent manner, or solicits personal information from anyone under 18
-NOTE: We reserve the right to suspend accounts for any reason whatsoever, as outlined in our terms and conditions.
+                        <ul>
+                            <li>&bull; Reason for account suspension can include Reports by app users about your profile conducting abusive, vulgar, or sexually explicit language.</li>
+                            <li>&bull; Asking for money upfront or in advance of your date using our site as an escort, or using the service to solicit clients for an escort service using our site to promote, ask or engage in prostitution, promoting or advertising a business, selling pictures, videos or cam sessions soliciting passwords, bank information or other personal identifying information for commercial or unlawful purposes from other users posting any false, misleading or inaccurate content about yourself and your profile having multiple active accounts.</li>
+                            <li>&bull; Creating a profile if you are under the age of 18 postings or sending material that exploits people under the age of 18 sexually or violently, or solicits personal information from anyone under 18. NOTE: We reserve the right to suspend accounts for any reason whatsoever, as outlined in our T&C.</li>
+                        </ul>
                       </div>
                     </div>
                   </div>
                   <div class="panel panel-default">
                     <div class="panel-heading">
                       <h4 class="panel-title">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseNine">How do I close my account?<i class="indicator icon_plus_alt2 pull-right"></i></a>
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseNine">How can I deactivate my account?<i class="indicator icon_plus_alt2 pull-right"></i></a>
                       </h4>
                     </div>
                     <div id="collapseNine" class="panel-collapse collapse">
                       <div class="panel-body">
-                        If you'd like to close your account just click on Edit Profile on your profile page, then click My Account, you'll find the option to close your account from there. All your photos and all sent messages will be deleted.
+                        If you like to delete your account, then you can click on> Edit profile> My Account> Deactivate account.
                       </div>
                     </div>
                   </div>
                    <div class="panel panel-default">
                     <div class="panel-heading">
                       <h4 class="panel-title">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseTen">I have a question, how can I contact you?<i class="indicator icon_plus_alt2 pull-right"></i></a>
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseTen">How to contact for Queries?<i class="indicator icon_plus_alt2 pull-right"></i></a>
                       </h4>
                     </div>
                     <div id="collapseTen" class="panel-collapse collapse">
                       <div class="panel-body">
-                        You can contact us using a contact form here or send us an email at: support@travelmates.online. We will get back to you within 24 hours
+                        You can write to us at support@travelmates.online, and we will get back to you within 24 hours.
                       </div>
                     </div>
                   </div>
                   <div class="panel panel-default">
                     <div class="panel-heading">
                       <h4 class="panel-title">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseEleven">What information will be shown on my credit card statement?<i class="indicator icon_plus_alt2 pull-right"></i></a>
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapseEleven">What information is displayed on my credit card statement?<i class="indicator icon_plus_alt2 pull-right"></i></a>
                       </h4>
                     </div>
                     <div id="collapseEleven" class="panel-collapse collapse">
                       <div class="panel-body">
-                        All payment processing information will appear as a Glad Technologies purchase and your anonymity will be 100% protected.
+                        All payment processing information will appear as Glad Technologies, and your identity will be 100% protected.
+                      </div>
+                    </div>
+                  </div>
+                  <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h4 class="panel-title">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#payment" href="#collapsetwelve">What happens if my account is suspended?<i class="indicator icon_plus_alt2 pull-right"></i></a>
+                      </h4>
+                    </div>
+                    <div id="collapsetwelve" class="panel-collapse collapse">
+                      <div class="panel-body">
+                        If your account is suspended, a hold was placed due to suspicious account activity. Your profile will be displayed to you, but you will not be able to use the app and other members will not be able to view your profile. Messages sent to your account will be received but cannot be accessed unless the suspension is thoroughly reviewed and granted by Customer support.
                       </div>
                     </div>
                   </div>
